--- a/_config.yml
+++ b/_config.yml
@@ -21,23 +21,19 @@
 title: Albert Calvo
 email: albertc@cs.upc.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal Webpage.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: albertcalv
+github_username:  albertcalv
 
 # Build settings
-theme: minima
-plugins:
-  - jekyll-feed
-
 plugins:
   - jekyll-remote-theme
-
-remote_theme: ngzhio/jekyll-theme-hamilton
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -59,3 +55,11 @@ remote_theme: ngzhio/jekyll-theme-hamilton
 #   - vendor/gems/
 #   - vendor/ruby/
 skin: daylight
+
+exclude:
+  - scripts/
+  - README.md
+  - jekyll-theme-hamilton.gemspec
+
+avatar: avatar.png
+lang: en
