--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Albert Calvo
-email: albertc@cs.upc.edu
+email: albertc [@] cs.upc.edu
 description: >- # this means to ignore newlines until "baseurl:"
   Personal Webpage.
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -63,3 +63,4 @@ exclude:
 
 avatar: avatar.png
 lang: en
+location: UPC-CS Ed. Omega
